add option COLLECTION_TYPE_ANY

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,9 @@
         <a href="./FormCollectionExample2.php">Multiple product forms (COLLECTION_TYPE_ALL)</a>
     </li>
     <li>
+        <a href="./FormCollectionExample3.php">Multiple product forms (COLLECTION_TYPE_ANY)</a>
+    </li>
+    <li>
         <a href="./FormCollectionHelperExample.php">Multiple payment forms with view helper (COLLECTION_TYPE_ONE)</a>
     </li>
     <li>
